# utf8_saker

./: .gitignore  .travis.yml  Doxyfile  README.md  all.dox  impl.md  rope_design.md
src/: utf8.hpp
test/: CMakeLists.txt  dummy  main.cpp  tests_rope.cpp
